--- a/static/scss/table.scss
+++ b/static/scss/table.scss
@@ -65,4 +65,14 @@ ul.list-fluid {
             width: 20px;
         }
     }    
+
+    li.xcol-6 {
+        span {
+            min-width: 16.666666666%;
+        }
+
+        .id {
+            width: 20px;
+        }
+    }    
 }
