--- a/templates/details/course-detail.html
+++ b/templates/details/course-detail.html
@@ -43,6 +43,10 @@
                 <div><b>Narxi:</b> {{ course.price }} so'm</div>
                 <div><b>Davomiyligi:</b> {{ course.duration }} soat</div>
             </div>
+
+            <div class="mb-3">
+                <div><b>Jami kurslar:</b> {{ groups.count }} ta</div>
+            </div>
            
         </div>
         <div class="_list">
