--- a/templates/tabs/course.html
+++ b/templates/tabs/course.html
@@ -14,36 +14,48 @@
             <span class="h5">
                 Narxi
             </span>
+            <span>
+                Guruhlar soni
+            </span>
         </li>
         {% for i in courses %}
-            <li class="list__item xcol-5" draggable="true" dropzone="true">
-                <span>
-                    <a href="{% url 'course-detail' i.pk %}">{{ i.name }}</a>
-                </span>
-                <span>
-                    {{ i.duration }} soat
-                </span>
-                <span>
-                    {{ i.price }} so'm
-                </span>
-            </li>
+        <li class="list__item xcol-5" draggable="true" dropzone="true">
+            <span>
+                <a href="{% url 'course-detail' i.pk %}">{{ i.name }}</a>
+            </span>
+            <span>
+                {{ i.duration }} soat
+            </span>
+            <span>
+                {{ i.pk }}
+            </span>
+            <span>
+                {{ i.price }} so'm
+            </span>
+        </li>
         {% endfor %}
     </ul>
 {% endblock %}
 
 {% block form %}
-    <h2 class="text-center pb-3">Yangi kurs qo'shish</h2>
-    <form method="post">{% csrf_token %}
-        <label for="name" class="h5">Kurs nomi</label>
-        <input type="text" name="name" class="form-control mb-3" id="name" required>
-        
-        <label for="duration" class="h5">Davomiyligi (soatda)</label>
-        <input type="number" name="duration" class="form-control mb-3" id="duration" required>
-        
-        <label for="price" class="h5">Narxi (1 oylik uchun so'mda)</label>
-        <input type="number" name="price" class="form-control mb-3" id="price" oninput="addSpace()" required min="0" max="5000000">
-        
+    <div id="modal" class="back d-none" data-modal-name="add-modal"> 
+        <div class="modal">
+            <div class="close" id="close" data-modal-id="add-modal">&times;</div>
 
-        <button class="btn btn-primary text-white" type="submit">Qo'shish</button>
-    </form>
+            <h2 class="text-center pb-3">Yangi kurs qo'shish</h2>
+            <form method="post">{% csrf_token %}
+                <label for="name" class="h5">Kurs nomi</label>
+                <input type="text" name="name" class="form-control mb-3" id="name" required>
+
+                <label for="duration" class="h5">Davomiyligi (soatda)</label>
+                <input type="number" name="duration" class="form-control mb-3" id="duration" required>
+
+                <label for="price" class="h5">Narxi (1 oylik uchun so'mda)</label>
+                <input type="number" name="price" class="form-control mb-3" id="price" oninput="addSpace()" required min="0"
+                    max="5000000">
+
+                <button class="btn btn-primary text-white" type="submit">Qo'shish</button>
+            </form>
+        </div>
+    </div>
 {% endblock form %}
