--- a/templates/tabs/peoples.html
+++ b/templates/tabs/peoples.html
@@ -45,8 +45,12 @@
 {% endblock %}
 
 {% block form %}
-    <h2 class="text-center pb-3">Yangi talaba qo'shish</h2>
+<div id="modal" class="back d-none" data-modal-name="add-modal"> 
+    <div class="modal">
+        <div class="close" id="close" data-modal-id="add-modal">&times;</div>
+        <h2 class="text-center pb-3">Yangi talaba qo'shish</h2>
     <form method="post">{% csrf_token %}
+        <input type="hidden" name="command" value="create">
         <label for="full-name" class="h5">Ism familiya</label>
         <input type="text" name="full-name" class="form-control mb-3" id="full-name" required>
         
@@ -58,4 +62,9 @@
         
         <button class="btn btn-primary text-white" type="submit">Qo'shish</button>
     </form>
+        
+    </div>
+</div>
+
+    
 {% endblock form %}
