--- a/templates/tabs/teachers.html
+++ b/templates/tabs/teachers.html
@@ -22,18 +22,26 @@
 {% endblock %}
 
 {% block form %}
-    <h2 class="text-center pb-3">Yangi o'qituvchi qo'shish</h2>
-    <form method="post">{% csrf_token %}
-        <label for="full-name" class="h5">Ism familiya</label>
-        <input type="text" name="full-name" class="form-control mb-3" id="full-name" required>
-        
-        <label for="phone" class="h5">Tel raqam</label>
-        <input type="text" name="phone" class="form-control mb-3" id="phone" required>
-        
-        <label for="birthday" class="h5">Tu'gilgan sana</label>
-        <input type="date" name="birthday" class="form-control mb-3" id="birthday" required>
-        
 
-        <button class="btn btn-primary text-white" type="submit">Qo'shish</button>
-    </form>
+<div id="modal" class="back d-none" data-modal-name="add-modal">
+    <div class="modal">
+        <div class="close" id="close"  data-modal-id="add-modal">&times;</div>
+        <h2 class="text-center pb-3">Yangi o'qituvchi qo'shish</h2>
+        <form method="post">{% csrf_token %}
+            <label for="full-name" class="h5">Ism familiya</label>
+            <input type="text" name="full-name" class="form-control mb-3" id="full-name" required>
+            
+            <label for="phone" class="h5">Tel raqam</label>
+            <input type="text" name="phone" class="form-control mb-3" id="phone" required>
+            
+            <label for="birthday" class="h5">Tu'gilgan sana</label>
+            <input type="date" name="birthday" class="form-control mb-3" id="birthday" required>
+            
+    
+            <button class="btn btn-primary text-white" type="submit">Qo'shish</button>
+        </form>
+        
+    </div>
+</div>
+    
 {% endblock form %}
